--- a/django-models/relationship_app/templates/relationship_app/login.html
+++ b/django-models/relationship_app/templates/relationship_app/login.html
@@ -1,3 +1,4 @@
+<!-- login.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -14,4 +15,4 @@
     </form>
     <a href="{% url 'register' %}">Register</a>
 </body>
-</html>
+</html>s
